# fastapi_car_sales

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
app/routers/: cars.py  communications.py
